solc_mutator_ossfuzz_seed_corpus/test_sol/test_370ae566735b9fcd1cd52165af5393847431c69aa76d9da311470744556008b2_1a724b059e0c5a29da4610da501f8c1a28ba33f6_sol.sol
==== Source:  ====

==== Source: su0.sol ====
enum EN0 {
  M0, M1, M2, M3, M4, M5, M6, M7,
  M8, M9, M10, M11, M12, M13, M14, M15,
  M16, M17, M18, M19, M20, M21, M22, M23,
  M24, M25, M26, M27, M28, M29, M30
}
function f0(address[] memory i0,function (bool, EN0) external   i1)    
{
}
library L0 {
  error er0(bytes31 ep0);
  function f1(EN0 i0,bytes10 i1) public   
  {
  }
  uint160 public constant cons0 = ((((((uint160(0) * uint160(1420480272007773783538579458324187886147018803723)) - uint160(409963798144806582591166553569479739989670730166)) - uint160(1461501637330902918203684832716283019655932542975)) * uint160(205642903774635262994413122555166992267355382729)) + uint160(375029883369227931654540659677217440940630001084)) ** uint104(uint104(3725117014726821466392833486341)));
  function f2() external    returns(function (bool, bool, uint152) external   returns (bool, address, string memory) o0)
  {
  }
  function f3() internal    returns(bytes21 o0)
  {
  }
  function f4(bool i0) internal    returns(address payable o0,int168 o1,bytes memory o2)
  {
    (bytes21 l0) = f3();
  }
  using L0 for *;
  function f5(bytes4 i0,int176 i1) external   
  {
  }
  error er1(function (int240) internal   returns (bool[] memory, int88) ep0, uint144 ep1);
  event ev0(uint48  ep0, bool  ep1);
  modifier m0() 
  {
    _;
  }
  function f6(int248 i0) private   
  {
    (address payable l0, int168 l1, bytes memory l2) = f4((!((false && false))));
  }
}
function f7(string memory i0,bool i1,function (EN0[1] memory, EN0) external   i2)    
{
}
using L0 for uint;
pragma solidity >= 0.0.0;
// ----
// TypeError 3417: (su0.sol:1136-1199): Internal or recursive type is not allowed as error parameter type.
